--- a/complete-node-bootcamp/4-natours/starter/server/views/base.pug
+++ b/complete-node-bootcamp/4-natours/starter/server/views/base.pug
@@ -1,15 +1,16 @@
 doctype
 html(lang="en")
   head
-    meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="/css/style.css")
-    link(rel="shortcut icon", type="image/png", href="/img/favicon.png")
-    link(
-      rel="stylesheet",
-      href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
-    )
-    title Natours | #{ (tour) ? tour.name : title }
+    block head
+      meta(charset="utf-8")
+      meta(name="viewport", content="width=device-width, initial-scale=1.0")
+      link(rel="stylesheet", href="/css/style.css")
+      link(rel="shortcut icon", type="image/png", href="/img/favicon.png")
+      link(
+        rel="stylesheet",
+        href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
+      )
+      title Natours | #{ (tour) ? tour.name : title }
   body
     // HEADER
     include _header
