--- a/complete-node-bootcamp/4-natours/starter/server/views/tour.pug
+++ b/complete-node-bootcamp/4-natours/starter/server/views/tour.pug
@@ -1,14 +1,27 @@
 extends base
 
+block append head
+  script(src="/js/mapbox.js", defer)
+  script(src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js")
+  link(
+    href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css",
+    rel="stylesheet"
+  )
+
 mixin reviewCard(review)
   .reviews__card
     .reviews__avatar
-      img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`)
+      img.reviews__avatar-img(
+        src=`/img/users/${review.user.photo}`,
+        alt=`${review.user.name}`
+      )
       h6.reviews__user= review.user.name
     p.reviews__text= review.review
     .reviews__rating
       each star in [1,2,3,4,5]
-        svg.reviews__star(class=`reviews__star--${(review.rating >= star ? 'active' : 'inactive')}`)
+        svg.reviews__star(
+          class=`reviews__star--${(review.rating >= star ? 'active' : 'inactive')}`
+        )
           use(xlink:href="/img/icons.svg#icon-star")
 
 mixin overViewBox(label, text, icon)
@@ -22,7 +35,10 @@ block content
   section.section-header
     .header__hero
       .header__hero-overlay &nbsp;
-      img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=`${tour.name}`)
+      img.header__hero-img(
+        src=`/img/tours/${tour.imageCover}`,
+        alt=`${tour.name}`
+      )
 
     .heading-box
       h1.heading-primary
@@ -42,7 +58,7 @@ block content
       div
         .overview-box__group
           h2.heading-secondary.ma-bt-lg Quick facts
-          - const date = tour.startDates[0].toLocaleString('en-US', { month: 'long', year: 'numeric'})
+          - const date = tour.startDates[0].toLocaleString("en-US", { month: "long", year: "numeric" });
           +overViewBox('Next date', date, 'calendar')
           +overViewBox('Difficulty', tour.difficulty, 'trending-up')
           +overViewBox('Participants', `${tour.maxGroupSize} people`, 'user')
@@ -52,14 +68,17 @@ block content
           h2.heading-secondary.ma-bt-lg Your tour guides
           each guide in tour.guides
             .overview-box__detail
-              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.role}`)
-              - const role = (guide.role === 'lead-guide') ? 'Lead Guide': 'Tour Guide'
+              img.overview-box__img(
+                src=`/img/users/${guide.photo}`,
+                alt=`${guide.role}`
+              )
+              - const role = guide.role === "lead-guide" ? "Lead Guide" : "Tour Guide";
               span.overview-box__label= role
               span.overview-box__text= guide.name
 
     .description-box
       h2.heading-secondary.ma-bt-lg= `About ${tour.name} tour`
-      - const sums = tour.description.split('\n')
+      - const sums = tour.description.split("\n");
       each summary in sums
         p.description__text= summary
 
@@ -68,12 +87,12 @@ block content
       .picture-box
         img.picture-box__img(
           src=`/img/tours/${image}`,
-          alt=`${tour.name} Tour ${i + 1}`
+          alt=`${tour.name} Tour ${i + 1}`,
           class=`picture-box__img--${i + 1}`
         )
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
@@ -84,8 +103,14 @@ block content
     .cta
       .cta__img.cta__img--logo
         img(src="/img/logo-white.png", alt="Natours logo")
-      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}`, alt=`${tour.images[1]}`)
-      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}`, alt=`${tour.images[2]}`)
+      img.cta__img.cta__img--1(
+        src=`/img/tours/${tour.images[1]}`,
+        alt=`${tour.images[1]}`
+      )
+      img.cta__img.cta__img--2(
+        src=`/img/tours/${tour.images[2]}`,
+        alt=`${tour.images[2]}`
+      )
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
