--- a/complete-node-bootcamp/4-natours/starter/server/views/login.pug
+++ b/complete-node-bootcamp/4-natours/starter/server/views/login.pug
@@ -14,8 +14,9 @@ block content
             type="email",
             placeholder="you@example.com",
             required
-            value="loulou@example.com"
+            value="admin@natours.io"
           )
+            //- value="loulou@example.com"
         .form__group.ma-bt-md
           label.form__label(for="password") Password
           input#password.form__input(
