--- a/complete-node-bootcamp/4-natours/starter/server/views/account.pug
+++ b/complete-node-bootcamp/4-natours/starter/server/views/account.pug
@@ -50,7 +50,10 @@ block content
             )
           .form__group.form__photo-upload
             img.form__user-photo(src=`img/users/${user.photo}`, alt=`Photo of ${user.name}`)
-            a.btn-text(href="") Choose new photo
+
+            input.form__upload(type='file', accept='image/*' id='photo', name='photo', enctype="multipart/form-data")
+            label(for='photo') Choose new photo
+            //- a.btn-text(href="") Choose new photo
           .form__group.right
             button#saveSettings.btn.btn--small.btn--green Save settings
       .line &nbsp;
