--- a/complete-node-bootcamp/4-natours/starter/server/views/account.pug
+++ b/complete-node-bootcamp/4-natours/starter/server/views/account.pug
@@ -1,7 +1,6 @@
 extends base
 
 block append head
-  
   script(src="/js/updateSettings.js", defer)
 
 mixin navItem(link, text, icon, active=false)
@@ -9,26 +8,25 @@ mixin navItem(link, text, icon, active=false)
   a(href=`${link}`)
     svg
       use(xlink:href=`img/icons.svg#icon-${icon}`)
-    | #{text}
-
+    | #{ text }
 
 block content
   main.main
   .user-view
     nav.user-view__menu
       ul.side-nav
-       +navItem('#', 'Settings', 'settings', true)
-       +navItem('#', 'My bookings', 'briefcase')
-       +navItem('#', 'My reviews', 'star')
-       +navItem('#', 'Billing', 'credit-card')
-      - if (user?.role === 'admin')    
+        +navItem('#', 'Settings', 'settings', true)
+        +navItem('#', 'My bookings', 'briefcase')
+        +navItem('#', 'My reviews', 'star')
+        +navItem('#', 'Billing', 'credit-card')
+      if (user.role === 'admin')
         .admin-nav
           h5.admin-nav__heading Admin
           ul.side-nav
-           +navItem('#', 'Manage tours', 'map')
-           +navItem('#', 'Manage users', 'users')
-           +navItem('#', 'Manage reviews', 'star')
-           +navItem('#', 'Manage booking', 'briefcase')
+            +navItem('#', 'Manage tours', 'map')
+            +navItem('#', 'Manage users', 'users')
+            +navItem('#', 'Manage reviews', 'star')
+            +navItem('#', 'Manage booking', 'briefcase')
 
     .user-view__content
       .user-view__form-container
@@ -36,11 +34,7 @@ block content
         form.form.form-user-data
           .form__group
             label.form__label(for="name") Name
-            input#name.form__input(
-              type="text",
-              value=`${user.name}`,
-              required
-            )
+            input#name.form__input(type="text", value=`${user.name}`, required)
           .form__group.ma-bt-md
             label.form__label(for="email") Email address
             input#email.form__input(
@@ -49,10 +43,18 @@ block content
               required
             )
           .form__group.form__photo-upload
-            img.form__user-photo(src=`img/users/${user.photo}`, alt=`Photo of ${user.name}`)
+            img.form__user-photo(
+              src=`img/users/${user.photo}`,
+              alt=`Photo of ${user.name}`
+            )
 
-            input.form__upload(type='file', accept='image/*' id='photo', name='photo', enctype="multipart/form-data")
-            label(for='photo') Choose new photo
+            input#photo.form__upload(
+              type="file",
+              accept="image/*",
+              name="photo",
+              enctype="multipart/form-data"
+            )
+            label(for="photo") Choose new photo
             //- a.btn-text(href="") Choose new photo
           .form__group.right
             button#saveSettings.btn.btn--small.btn--green Save settings
